feature/alter endpoint images/FINAL

--- a/src/app/guided-tour/guided-tour.component.html
+++ b/src/app/guided-tour/guided-tour.component.html
@@ -124,7 +124,7 @@
     <i class="fas fa-times" aria-hidden="true"></i>
   </button>
   <div class="signin-simulation" tabindex="-1">
-    <img src="../../../assets/images/tour/orcid-signin.png" alt="Simulação da página de autenticação do ORCID"
+    <img src="./assets/images/tour/orcid-signin.png" alt="Simulação da página de autenticação do ORCID"
          aria-label="Tela de login ORCID" />
   </div>
 </div>
@@ -228,7 +228,7 @@
     Ao confirmar a mensagem de sincronização, o sistema realiza a leitura na
     base do ORCID e apresenta todas as produções que podem ser importadas.
   </p>
-  <img src="../../../assets/images/tour/menu-production.png" alt="menu-produção" class="card-image"
+  <img src="./assets/images/tour/menu-production.png" alt="menu-produção" class="card-image"
        aria-label="Imagem do menu de produção" />
   <div class="step-info" aria-live="polite">
     {{ currentStepIndex + 1 }} de {{ steps.length }}
@@ -267,7 +267,7 @@
   </button>
 </div>
 <div class="tabela-image-container" *ngIf="isTourActive && currentStepIndex === 7" tabindex="0">
-  <img src="../../../assets/images/tour/table.png" alt="tabela-modelo" class="tabela-image"
+  <img src="./assets/images/tour/table.png" alt="tabela-modelo" class="tabela-image"
        aria-label="Imagem da tabela modelo" />
 </div>
 <div class="card-tour-recorte step-custom" *ngIf="isTourActive && currentStepIndex === 8" tabindex="0">
@@ -324,7 +324,7 @@
   <button class="close-tour-button" aria-label="Fechar Tour" (click)="closeTour()" tabindex="0">
     <i class="fas fa-times" aria-hidden="true"></i>
   </button>
-  <img src="../../../assets/images/tour/lido.png" alt="lido-na-fonte" class="card-image-status"
+  <img src="./assets/images/tour/lido.png" alt="lido-na-fonte" class="card-image-status"
        aria-label="Importação lido na fonte" />
 </div>
 <div class="card-tour-recorte step-custom-status" *ngIf="isTourActive && currentStepIndex === 10" tabindex="0">
@@ -350,7 +350,7 @@
   <button class="close-tour-button" aria-label="Fechar Tour" (click)="closeTour()" tabindex="0">
     <i class="fas fa-times" aria-hidden="true"></i>
   </button>
-  <img src="../../../assets/images/tour/sucesso.png" alt="sucesso" class="card-image-status"
+  <img src="./assets/images/tour/sucesso.png" alt="sucesso" class="card-image-status"
        aria-label="Importação com sucesso" />
 </div>
 <div class="card-tour-recorte step-custom-status" *ngIf="isTourActive && currentStepIndex === 11" tabindex="0">
@@ -388,7 +388,7 @@
   <button class="close-tour-button" aria-label="Fechar Tour" (click)="closeTour()" tabindex="0">
     <i class="fas fa-times" aria-hidden="true"></i>
   </button>
-  <img src="../../../assets/images/tour/fl.png" alt="falha" class="card-image-status"
+  <img src="./assets/images/tour/fl.png" alt="falha" class="card-image-status"
        aria-label="Imagem de importação com falha" />
 </div>
 <div class="card-tour-recorte step-custom-status" *ngIf="isTourActive && currentStepIndex === 12" tabindex="0">
@@ -417,7 +417,7 @@
   <button class="close-tour-button" aria-label="Fechar Tour" (click)="closeTour()" tabindex="0">
     <i class="fas fa-times" aria-hidden="true"></i>
   </button>
-  <img src="../../../assets/images/tour/mod.png" alt="modificado" class="card-image-status"
+  <img src="./assets/images/tour/mod.png" alt="modificado" class="card-image-status"
        aria-label="Importação modificado na fonte" />
 </div>
 
@@ -449,7 +449,7 @@
   <button class="close-tour-button" aria-label="Fechar Tour" (click)="closeTour()" tabindex="0">
     <i class="fas fa-times" aria-hidden="true"></i>
   </button>
-  <img src="../../../assets/images/tour/excori.png" alt="excluída origem" class="card-image-status"
+  <img src="./assets/images/tour/excori.png" alt="excluída origem" class="card-image-status"
        aria-label="Excluído na origem" />
 </div>
 <div class="card-tour-recorte step-custom-status" *ngIf="isTourActive && currentStepIndex === 14" tabindex="0">
@@ -478,7 +478,7 @@
   <button class="close-tour-button" aria-label="Fechar Tour" (click)="closeTour()" tabindex="0">
     <i class="fas fa-times" aria-hidden="true"></i>
   </button>
-  <img src="../../../assets/images/tour/excdest.png" alt="excluída no destino" class="card-image-status"
+  <img src="./assets/images/tour/excdest.png" alt="excluída no destino" class="card-image-status"
        aria-label="Produção Excluída no destino" />
 </div>
 <div class="card-tour-recorte step-custom-status" *ngIf="isTourActive && currentStepIndex === 15" tabindex="0">
@@ -507,7 +507,7 @@
   <button class="close-tour-button" aria-label="Fechar Tour" (click)="closeTour()" tabindex="0">
     <i class="fas fa-times" aria-hidden="true"></i>
   </button>
-  <img src="../../../assets/images/tour/dupli.png" alt="duplicada" class="card-image-status"
+  <img src="./assets/images/tour/dupli.png" alt="duplicada" class="card-image-status"
        aria-label="Produção duplicada na origem" />
 </div>
 <div class="card-tour-recorte step-custom-status" *ngIf="isTourActive && currentStepIndex === 16" tabindex="0">
@@ -537,7 +537,7 @@
   <button class="close-tour-button" aria-label="Fechar Tour" (click)="closeTour()" tabindex="0">
     <i class="fas fa-times" aria-hidden="true"></i>
   </button>
-  <img src="../../../assets/images/tour/inc.png" alt="inconsistência" class="card-image-status"
+  <img src="./assets/images/tour/inc.png" alt="inconsistência" class="card-image-status"
        aria-label="Importação com inconsistência" />
 </div>
 <div class="card-tour-recorte step-custom" *ngIf="isTourActive && currentStepIndex === 17" tabindex="0">
@@ -563,7 +563,7 @@
   <button class="close-tour-button" aria-label="Fechar Tour" (click)="closeTour()" tabindex="0">
     <i class="fas fa-times" aria-hidden="true"></i>
   </button>
-  <img src="../../../assets/images/tour/edit.png" alt="edição" class="card-image-edit"
+  <img src="./assets/images/tour/edit.png" alt="edição" class="card-image-edit"
        aria-label="Imagem icone edição" />
 </div>
 <div class="card-tour-recorte step-custom-two" *ngIf="isTourActive && currentStepIndex === 18" tabindex="0">
